Update build issue

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.81",
+		"@sveltejs/adapter-netlify": "1.0.0-next.79",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.12",
 		"eslint": "^8.16.0",
